--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/hanuman"
     tools:context=".MainActivity">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.example.deathmagnet.hanumanchalisa.HindiTextView
         android:id="@+id/textV"
@@ -21,5 +24,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+</ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
